--- a/src/layouts/checkout.fxml
+++ b/src/layouts/checkout.fxml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
+<?import javafx.scene.image.*?>
+<?import java.lang.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CartController">
+<AnchorPane prefHeight="720.0" prefWidth="1020.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CheckoutController">
     <children>
         <MenuBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <menus>
@@ -25,41 +28,91 @@
                 </Menu>
             </menus>
         </MenuBar>
-        <Button layoutX="70.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="150.0" text="Tillbaka" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="70.0" />
-        <Button fx:id="nextButton" layoutX="1576.0" layoutY="880.0" mnemonicParsing="false" onAction="#nextButtonPressed" prefHeight="70.0" prefWidth="150.0" text="Nästa" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="70.0" />
+        <Button layoutX="70.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="150.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="70.0">
+         <graphic>
+            <Group>
+               <children>
+                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../resources/img/previousArrow.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="36.0" layoutY="8.0" text="Previous">
+                     <font>
+                        <Font size="40.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Group>
+         </graphic></Button>
+        <Button fx:id="nextButton" layoutX="1576.0" layoutY="880.0" mnemonicParsing="false" onAction="#nextButtonPressed" prefHeight="70.0" prefWidth="150.0" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="70.0">
+         <graphic>
+            <Group>
+               <children>
+                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../resources/img/NextArrow.png" />
+                     </image>
+                  </ImageView>
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="44.0" layoutY="9.0" text="Next">
+                     <font>
+                        <Font size="40.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Group>
+         </graphic></Button>
         <GridPane alignment="TOP_CENTER" layoutX="516.0" layoutY="145.0" AnchorPane.leftAnchor="650.0" AnchorPane.rightAnchor="650.0" AnchorPane.topAnchor="70.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" percentWidth="0.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" percentWidth="0.0" prefWidth="30.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" percentWidth="0.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" percentWidth="0.0" prefWidth="30.0" />
                 <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" minWidth="0.0" percentWidth="0.0" />
+            <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" minWidth="0.0" percentWidth="0.0" prefWidth="30.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" percentWidth="0.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Label text="Leverans">
-                    <font>
-                        <Font size="40.0" />
-                    </font>
-                </Label>
-                <Label alignment="CENTER" contentDisplay="CENTER" text=" &gt; Varukorg" textAlignment="CENTER" GridPane.columnIndex="1">
-                    <font>
-                        <Font size="40.0" />
-                    </font>
-                </Label>
-                <Label text=" &gt; Betalning" GridPane.columnIndex="2">
-                    <font>
-                        <Font size="40.0" />
-                    </font>
-                </Label>
-                <Label text=" &gt; Granska" GridPane.columnIndex="3">
-                    <font>
-                        <Font size="40.0" />
-                    </font>
-                </Label>
+            <Hyperlink focusTraversable="false" text="Varukorg">
+               <font>
+                  <Font size="35.0" />
+               </font>
+            </Hyperlink>
+            <Label text="&gt;" GridPane.columnIndex="1">
+               <font>
+                  <Font size="40.0" />
+               </font>
+            </Label>
+            <Hyperlink focusTraversable="false" text="Leverans" GridPane.columnIndex="2">
+               <font>
+                  <Font size="35.0" />
+               </font>
+            </Hyperlink>
+            <Label text="&gt;" GridPane.columnIndex="3">
+               <font>
+                  <Font size="35.0" />
+               </font>
+            </Label>
+            <Hyperlink focusTraversable="false" text="Betalning" GridPane.columnIndex="4">
+               <font>
+                  <Font size="35.0" />
+               </font>
+            </Hyperlink>
+            <Hyperlink focusTraversable="false" text="Granskning" GridPane.columnIndex="6">
+               <font>
+                  <Font size="35.0" />
+               </font>
+            </Hyperlink>
+            <Label text="&gt;" GridPane.columnIndex="5">
+               <font>
+                  <Font size="35.0" />
+               </font>
+            </Label>
             </children>
         </GridPane>
-      <AnchorPane fx:id="pane" layoutX="937.0" layoutY="250.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="140.0" AnchorPane.leftAnchor="360.0" AnchorPane.rightAnchor="360.0" AnchorPane.topAnchor="150.0" />
+      <AnchorPane fx:id="pane" layoutX="250.0" layoutY="135.0" prefHeight="480.0" prefWidth="800.0" AnchorPane.topAnchor="135.0" />
     </children>
 </AnchorPane>
