--- a/src/layouts/popup.fxml
+++ b/src/layouts/popup.fxml
@@ -4,12 +4,12 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Polygon?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Polygon fill="WHITE" layoutX="14.0" layoutY="354.0" rotate="-90.0" stroke="BLACK" strokeType="INSIDE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+      <Polygon fill="WHITE" layoutX="14.0" layoutY="354.0" rotate="-90.0" stroke="BLACK" strokeType="INSIDE" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0">
         <points>
           <Double fx:value="-50.0" />
           <Double fx:value="40.0" />
@@ -19,14 +19,30 @@
           <Double fx:value="-60.0" />
         </points>
       </Polygon>
-      <AnchorPane layoutX="325.0" layoutY="79.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="325.0" layoutY="79.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white; -fx-border-color: black;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button layoutX="544.0" layoutY="2.0" mnemonicParsing="false" style="-fx-background-color: red;" text="X" textFill="WHITE">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
+            <StackPane layoutX="185.0" layoutY="125.0" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <fx:include fx:id="historyPane" source="history.fxml" />
+                  <fx:include fx:id="shoppingListsPane" source="shopping_lists.fxml" />
+                  <Button mnemonicParsing="false" style="-fx-background-color: red;" text="X" textFill="WHITE" StackPane.alignment="TOP_RIGHT">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+               </children>
+            </StackPane>
          </children>
       </AnchorPane>
+      <Polygon fill="WHITE" layoutX="24.0" layoutY="364.0" rotate="-90.0" stroke="WHITE" strokeType="INSIDE" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="2.0">
+         <points>
+            <Double fx:value="-50.0" />
+            <Double fx:value="40.0" />
+            <Double fx:value="50.0" />
+            <Double fx:value="40.0" />
+            <Double fx:value="0.0" />
+            <Double fx:value="-60.0" />
+         </points>
+      </Polygon>
    </children>
 </AnchorPane>
