--- a/src/layouts/checkout.fxml
+++ b/src/layouts/checkout.fxml
@@ -72,6 +72,10 @@
          <children>
             <StackPane prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
+                  <fx:include fx:id="confirmationPane" source="confirmation.fxml" />
+                  <fx:include fx:id="paymentPane" source="payment.fxml" />
+                  <fx:include fx:id="deliveryPane" source="delivery.fxml" />
+                  <fx:include fx:id="cartPane" source="cart.fxml" />
                </children>
             </StackPane>
          </children></AnchorPane>
