Added some Navigation in Checkout. Made some changes to Checkout FXML File Created a new controller

--- a/src/layouts/checkout.fxml
+++ b/src/layouts/checkout.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -15,7 +16,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CartController">
+<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CheckoutController">
     <children>
         <MenuBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <menus>
@@ -36,20 +37,23 @@
                 </Menu>
             </menus>
         </MenuBar>
-        <Button layoutX="70.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="150.0" text="Tillbaka" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="70.0" />
+        <Button layoutX="70.0" mnemonicParsing="false" onAction="#backButtonPressed" prefHeight="70.0" prefWidth="150.0" text="Tillbaka" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="70.0" />
         <Button fx:id="nextButton" layoutX="1576.0" layoutY="880.0" mnemonicParsing="false" onAction="#nextButtonPressed" prefHeight="70.0" prefWidth="150.0" text="Nästa" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="70.0" />
-        <GridPane alignment="TOP_CENTER" layoutX="516.0" layoutY="145.0" AnchorPane.leftAnchor="650.0" AnchorPane.rightAnchor="650.0" AnchorPane.topAnchor="70.0">
+        <GridPane alignment="TOP_CENTER" layoutX="516.0" layoutY="145.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" percentWidth="0.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" percentWidth="0.0" />
                 <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" minWidth="0.0" percentWidth="0.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="0.0" percentWidth="0.0" />
+            <ColumnConstraints />
+            <ColumnConstraints />
+            <ColumnConstraints />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-            <Hyperlink focusTraversable="false" text="Varukorg">
+            <Hyperlink fx:id="cartLink" focusTraversable="false" onAction="#linkClicked" text="Varukorg">
                <font>
                   <Font size="35.0" />
                </font>
@@ -59,7 +63,7 @@
                   <Font size="40.0" />
                </font>
             </Label>
-            <Hyperlink focusTraversable="false" text="Leverans" GridPane.columnIndex="2">
+            <Hyperlink fx:id="deliveryLink" focusTraversable="false" onAction="#linkClicked" text="Leverans" GridPane.columnIndex="2">
                <font>
                   <Font size="35.0" />
                </font>
@@ -69,12 +73,12 @@
                   <Font size="35.0" />
                </font>
             </Label>
-            <Hyperlink focusTraversable="false" text="Betalning" GridPane.columnIndex="4">
+            <Hyperlink fx:id="paymentLink" focusTraversable="false" onAction="#linkClicked" text="Betalning" GridPane.columnIndex="4">
                <font>
                   <Font size="35.0" />
                </font>
             </Hyperlink>
-            <Hyperlink focusTraversable="false" text="Granskning" GridPane.columnIndex="6">
+            <Hyperlink fx:id="confirmationLink" focusTraversable="false" onAction="#linkClicked" text="Granskning" GridPane.columnIndex="6">
                <font>
                   <Font size="35.0" />
                </font>
@@ -86,7 +90,7 @@
             </Label>
             </children>
         </GridPane>
-      <AnchorPane fx:id="pane" layoutX="937.0" layoutY="250.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="140.0" AnchorPane.leftAnchor="360.0" AnchorPane.rightAnchor="360.0" AnchorPane.topAnchor="150.0">
+      <AnchorPane fx:id="pane" layoutX="937.0" layoutY="250.0" prefHeight="800.0" prefWidth="800.0" AnchorPane.bottomAnchor="140.0" AnchorPane.leftAnchor="360.0" AnchorPane.rightAnchor="360.0" AnchorPane.topAnchor="150.0">
          <children>
             <StackPane prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
